# TourRag

./: README.md  image_summaries_gemma3_12b.csv  pyproject.toml  tour_crawling.ipynb  tour_data.csv  tour_info_rag.py
gradio_multimodal_bot/: multimodalgradiochat_final.py  pyproject.toml
gradio_multimodal_bot/chroma_db/: chroma.sqlite3
