[project]
name = "gradio-multimodal-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "gradio-multimodalchatbot (>=0.0.1,<0.0.2)",
    "langchain-core (>=0.3.46,<0.4.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "langchain-openai (>=0.3.9,<0.4.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
    "protobuf (==3.20.*)",
    "langgraph (>=0.3.18,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
